Correction de l’overflow sur le screen

--- a/platforms/browser/www/less/_Screen.less
+++ b/platforms/browser/www/less/_Screen.less
@@ -82,7 +82,7 @@ main {
     }
   }
   #restaurants, #hebergements, #activites {
-    overflow: scroll;
+    //overflow: scroll;
     flex-direction: column;
     padding: 25px;
     padding-bottom: 150px;
